--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,6 +15,12 @@
     "react/jsx-filename-extension": 0,
     "react/jsx-indent": [2, 2],
     "no-unused-expressions": ["error", { "allowShortCircuit": true }],
+    "no-param-reassign": [
+      "error",
+      {
+        "props": false
+      }
+    ],
     "no-unused-vars": [
       "error",
       {
