--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "prop-types": "^15.6.2",
     "react": "16.6.3",
     "react-native": "0.57.8",
+    "react-native-cn-richtext-editor": "^1.0.23",
+    "react-native-popup-menu": "^0.15.0",
     "react-native-splash-screen": "^3.1.1",
     "react-native-sqlite-storage": "^3.3.9",
     "react-native-swipe-list-view": "^1.5.0",
