--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
     "prop-types": "^15.6.2",
     "react": "16.6.3",
     "react-native": "0.57.8",
+    "react-native-keyboard-spacer": "^0.4.1",
     "react-native-splash-screen": "^3.1.1",
     "react-native-sqlite-storage": "^3.3.9",
     "react-native-swipe-list-view": "^1.5.0",
+    "react-native-webview-bridge": "^0.40.1",
+    "react-native-webview-bridge-updated": "^1.1.1",
     "react-navigation": "^2.16.0"
   },
   "devDependencies": {
